# EclipseMenu-RecordMode-Fork

./: CMakeLists.txt  README.md  autopush.sh  mod.json
.github/workflows/: build.yml
include/bot/: BotTypes.hpp
src/bot/: BotManager.cpp  BotManager.hpp  FrameStepperBridge.cpp  Recorder.cpp
src/hooks/: PlayLayerHooks.cpp
src/ui/: BotTab.cpp
